--- a/ios-engineer.html
+++ b/ios-engineer.html
@@ -86,7 +86,7 @@
 <p><span class="badge badge-light">Zurich, Switzerland</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/wattpad/44962ffb-6786-4e2c-92d9-77b1c64b402f'>Wattpad - iOS Engineer - Premium Squad</a></h5> 
+<h5><a href='https://jobs.lever.co/wattpad/44962ffb-6786-4e2c-92d9-77b1c64b402f'>Wattpad - iOS Engineer - Premium Squad</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -118,7 +118,7 @@
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/takealotcom/jobs/1929134'>Job Application for iOS Software Engineer - Mr D Food at takealot.com</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/takealotcom/jobs/1929134'>Job Application for iOS Software Engineer - Mr D Food at takealot.com</a></h5> 
 <p><span class="badge badge-light">Cape Town  Cape Town</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -157,7 +157,7 @@ like? mobile applications. ? Experience with e-commerce applications in a?...</p
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://neugelb.join.com/jobs/450042-devops-engineer-m-f-d'>Job @ NEUGELB Studios (Berlin): DevOps Engineer (m... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://neugelb.join.com/jobs/450042-devops-engineer-m-f-d'>Job @ NEUGELB Studios (Berlin): DevOps Engineer (m... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -208,7 +208,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/pipeworks/job/oq6nbfwO'>Pipeworks Studios Careers - Software Engineer, Madden NFL</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/pipeworks/job/oq6nbfwO'>Pipeworks Studios Careers - Software Engineer, Madden NFL</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
@@ -270,7 +270,7 @@ social and mobile platforms. Founded by a team of experienced gaming and?...</p>
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/coupang2/jobs/1912688'>Job Application for Sr. iOS Engineer (Coupang Media Group Tech) at Coupang(TECH)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang2/jobs/1912688'>Job Application for Sr. iOS Engineer (Coupang Media Group Tech) at Coupang(TECH)</a></h5> 
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -315,11 +315,11 @@ Our fast-paced and entrepreneurial environment is paired with the strong?...</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/grindr/jobs/1876966'>Job Application for iOS Engineer at Grindr</a></h5> 
+<h5><a href='https://boards.greenhouse.io/grindr/jobs/1876966'>Job Application for iOS Engineer at Grindr</a></h5> 
 <p><span class="badge badge-light">West Hollywood</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://worknola.com/job/324107/nagios-monitoring-engineer'>Nagios Monitoring Engineer | WorkNOLA</a></h5> 
+<h5><a href='https://worknola.com/job/324107/nagios-monitoring-engineer'>Nagios Monitoring Engineer | WorkNOLA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-11</p>
 <hr/>
@@ -356,7 +356,7 @@ the fourth largest Travel Management Company in the world because of our?...</p>
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='https://bios-3.workable.com/j/049C7A96E7'>BIOS - Jobs: Medical Mechanical Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bios-3.workable.com/j/049C7A96E7'>BIOS - Jobs: Medical Mechanical Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Cambridge England, United Kingdom</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
